osprey_worker/src/osprey/engine/query_language/tests/test_did_mutate_label/test_did_mutate_label_fails[DidAddLabel(entity_type='InvalidEntity', label_name='my_label')].txt
error: label is not valid for this entity type
--> main.sml:1:24
     |
   1 | DidAddLabel(entity_type='InvalidEntity', label_name='my_label')
     |                         ^ entity has type `InvalidEntity`, this label is valid for `MyEntity`
